--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^5.2.0",
+    "prettier": "^2.8.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
